# endfield-production-planner

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: deploy.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: constants.rs  error.rs  lib.rs
core/src/config/: loader.rs  mod.rs
core/src/i18n/: loader.rs  mod.rs
core/src/models/: machine.rs  production.rs  recipe.rs
core/src/output/: display.rs
core/src/planner/: calculator.rs  dependency_resolver.rs  mod.rs  plan.rs  recipe_selector.rs
res/: machines.toml  recipes.toml
res/locales/: en.toml  ja.toml
src/: constants.rs  main.rs
src/config/: loader.rs
src/models/: mod.rs  production.rs  recipe.rs
src/output/: display.rs  mod.rs
src/planner/: mod.rs  plan.rs  production.rs
web/: Cargo.toml  index.html  styles.css
web/src/: main.rs
web/src/components/: app.rs  mod.rs  tree_view.rs
web/src/utils/: localization.rs  mod.rs  url.rs
